--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,6 @@ backoff==2.2.1
 bcrypt==4.1.2
 beautifulsoup4==4.12.3
 blinker==1.7.0
-bson==0.5.10
 build==1.2.1
 cachetools==5.3.3
 certifi==2024.2.2
@@ -139,7 +138,7 @@ pyasn1_modules==0.4.0
 pydantic==2.6.4
 pydantic_core==2.16.3
 Pygments==2.17.2
-pymongo==4.6.3
+pymongo
 PyMuPDF==1.24.0
 PyMuPDFb==1.24.0
 pyparsing==3.1.2
@@ -150,7 +149,6 @@ pyreadline3==3.4.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.1
-pywin32==306
 PyYAML==6.0.1
 qdrant-client==1.8.2
 referencing==0.34.0
